# agent-ide

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  REFACTORING.md  index.html  package-lock.json  package.json
.opencode/plugin/: unknown.ts.bak
docs/: agent-hook-notifications.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/objc/: notification.h  notification.m
src-tauri/src/: agents.rs  lib.rs  main.rs  notification.rs  pr_info.rs  pty.rs  pty_client.rs  pty_daemon.rs  pty_engine.rs  pty_protocol.rs  remote_ssh.rs
src/components/dialogs/: AddProjectDialog.tsx  AddWorktreeDialog.tsx  DeleteDialog.tsx  NewItemDialog.tsx  RemoteDirBrowser.tsx  RenameDialog.tsx
src/components/layout/: AppLayout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/main/: EditorZone.tsx  MainArea.tsx  SplitPaneContainer.tsx  TerminalView.tsx  TerminalZone.tsx
src/components/sidebar/: FileTree.tsx  FileTreeContextMenu.tsx  FileTreeNode.tsx  LeftSidebar.tsx  RightSidebar.tsx
src/components/ui/: DevNotificationContainer.tsx  Dialog.tsx  SearchableSelect.tsx
src/services/: agents.ts  notifications.ts  prInfo.ts  terminalEvents.ts
src/stores/: agentStore.ts  connectionStatusStore.ts  devNotificationStore.ts  fileTreeStore.ts  prStore.ts  projectStore.ts  terminalStore.ts
src/types/: index.ts
src/utils/: fsActions.ts
