[package]
name = "agent-ide"
version = "0.1.0"
description = "Agent IDE - A lightweight cross-platform IDE"
authors = ["krebbl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
libc = "0.2"
base64 = "0.22"
russh = "0.50"
russh-sftp = "2"
russh-keys = "0.50.0-beta.7"
git2 = { version = "0.19", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
shlex = "1"
dirs = "6"
daemonize = "0.5"
open = "5"

